Fix tabbing and layout issues

--- a/src/components/ids-modal/ids-modal.scss
+++ b/src/components/ids-modal/ids-modal.scss
@@ -12,6 +12,7 @@
 
 :host(:not([visible])) {
   pointer-events: none;
+  visibility: hidden;
 }
 
 .ids-modal {
